turtleart.kerr36.Kerr36.scala.error
Compilation error:
Kerr36:15: error: type mismatch;
 found   : Array[Unit]
 required: Array[Int]
    makePattern(x)
                ^